--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Gabriel - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer, localizado em São José dos Campos.">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./favicon.jpg" type="image/svg-xml"/>
 </head>
 
 <body>
