Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <footer class="footer" id="contato" aria-label="Contato">
     <div class="footer-container">
-      <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma connversa.
+      <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa.
       </p>
       <ul class="footer-contato">
         <li>Gabriel2015sjc@gmail.com</li>
